gitops/salsa-latina/base/v1/backend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: salsa-latina-backend-svc
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: salsa-latina-backend-app
