gitops/salsa-latina/base/v1/networking-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: salsa-latina-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: salsa-latina-app
